--- a/nonlinear/Makefile
+++ b/nonlinear/Makefile
@@ -65,4 +65,4 @@ solve_collapse.o: $(OBJ)
 coupledDE_export_cosmology.o: $(OBJ)
 
 fR_collapse_1Dtoy.o: fR1Dobj.o
-fR1Dobj.o: ../include/updatephi.h ../include/updatephi_QS.h
+fR1Dobj.o: ../include/updatephi_QS.h
