fix large alpha_M bug

--- a/configure.in
+++ b/configure.in
@@ -39,7 +39,8 @@ DARK_ENERGY_MODEL = EFT
 LAPACK = $(HOME)/work/scilibs/lapack/
 
 ##FFTW lib (v3.2 up)
-FFTW3 = $(HOME)/work/scilibs/fftw3
+FFTW3 = 
+#$(HOME)/work/scilibs/fftw3
 
 ## gsl lib 
 GSL =
@@ -50,10 +51,12 @@ CLIKPATH =
 #$(HOME)/work/scilibs/COOP/forecast/plc-1.0/
 
 ##cfitsio lib, mandatory if you do mapio
-CFITSIO = $(HOME)/work/scilibs/cfitsio
+CFITSIO = 
+#$(HOME)/work/scilibs/cfitsio
 
 ##Healpix lib, mandatory if you do mapio
-HEALPIX = $(HOME)/work/scilibs/Healpix
+HEALPIX = 
+#$(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
