--- a/firstorder/inis/alpha1.ini
+++ b/firstorder/inis/alpha1.ini
@@ -9,11 +9,11 @@ root = alpha1
 #otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
 #alpha_power = 4
 ###the alpha_X0 values
-de_alpha_M0 = 2.d0
+de_alpha_M0 = 2.
 de_alpha_K0 = 1.
-de_alpha_B0 = 0.d0
-de_alpha_T0 = 0.d0
-de_M2_power = 1.6d0
+de_alpha_B0 = 0.
+de_alpha_T0 = 0.
+de_M2_power = 1.6
 de_alpha_K_power = 1.
 de_alpha_B_power = 1.
 de_alpha_T_power = 1.
