--- a/firstorder/inis/alpha2.ini
+++ b/firstorder/inis/alpha2.ini
@@ -11,8 +11,8 @@ root = alpha2
 ###the alpha_X0 values
 de_alpha_M0 = 0
 de_alpha_K0 = 1.
-de_alpha_B0 = 0.d0
-de_alpha_T0 = -0.9d0
+de_alpha_B0 = 0.
+de_alpha_T0 = -0.9
 de_M2_power = 1.
 de_alpha_K_power = 1.
 de_alpha_B_power = 1.
@@ -73,7 +73,7 @@ lmax_tensor = 1500
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
 
-variables  =  z DE_M_star  DE_alpha_K DE_alpha_B DE_alpha_M DE_alpha_T
+variables  =  z T00 G00 T0i G0i DE_alpha_cs2
 
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
@@ -107,8 +107,8 @@ r = 0.
 
 #dark energy equation of state
 #standard w = w_0 + w_a (1-a)
-de_w = -1.
-de_wa = 0.
+de_w = -0.1
+de_wa = -1.2
 ##if the standard w0wa parametrization is commented out, uses the quintessence motivated (for DARK_ENERGY_MODEL = COUPLED_DE)
 #de_epss = 0.1d0
 #de_epsinf = 0.d0
