--- a/firstorder/inis/alpha2.ini
+++ b/firstorder/inis/alpha2.ini
@@ -9,7 +9,7 @@ root = alpha2
 #otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
 #alpha_power = 4
 ###the alpha_X0 values
-de_alpha_M0 = 0
+de_alpha_M0 = 0.
 de_alpha_K0 = 1.
 de_alpha_B0 = 0.
 de_alpha_T0 = -0.9
