fix rho_de_1 bug

--- a/firstorder/inis/alpha1.ini
+++ b/firstorder/inis/alpha1.ini
@@ -73,7 +73,7 @@ lmax_tensor = 1500
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
 
-variables  =  z DE_M_star  DE_alpha_K DE_alpha_B DE_alpha_M DE_alpha_T
+variables  =  z T00 G00 T0i G0i Phi Psi
 
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
