--- a/firstorder/inis/alpha3.ini
+++ b/firstorder/inis/alpha3.ini
@@ -25,7 +25,7 @@ de_alpha_H0 = 0.
 #de_alpha_B0 = 0
 #de_alpha_H0 = 0
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
-kMpc = 0.0001
+kMpc = 0.01
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
 #output_redshift = 0
 
@@ -74,7 +74,7 @@ lmax_tensor = 1500
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
 
-variables  =  z G00 T00 G0i T0i DE_alpha_cs2
+variables  =  lna Phi Psi H pi
 
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
