--- a/firstorder/inis/eft2.ini
+++ b/firstorder/inis/eft2.ini
@@ -9,18 +9,13 @@ root = lcdm
 #otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
 #alpha_power = 4
 ###the alpha_X0 values
-de_alpha_M0 = 0
-#2.74372
-de_alpha_K0 = 0
-#0.68593
-de_alpha_B0 = 0
-#0
-#-0.214353
+de_alpha_M0 = 2.74372
+de_alpha_K0 = 0.68593
+de_alpha_B0 = -0.214353
 #-0.4287
 #-0.64306
 # -0.8574
-de_alpha_T0 = 0
-# -0.1714825
+de_alpha_T0 =  -0.1714825
 # -0.68593
 de_alpha_H0 = 0.
 
