--- a/firstorder/Makefile
+++ b/firstorder/Makefile
@@ -36,7 +36,8 @@ clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test CalcCls SolvePert CalcMP
 
 
-firstorder.o:	pertobj.o  ../include/firstorder_equations.h ../include/firstorder_source.h ../include/recfast_source.h ../include/recfast_head.h ../include/firstorder_basic_utils.h ../include/firstorder_ic.h ../include/firstorder_ic_EFT.h ../include/firstorder_equations_EFT.h ../include/firstorder_equations_EFT_ignore_early.h
+firstorder.o:	pertobj.o  ../include/firstorder_equations.h ../include/firstorder_source.h ../include/recfast_source.h ../include/recfast_head.h ../include/firstorder_basic_utils.h ../include/firstorder_ic.h ../include/firstorder_ic_EFT.h ../include/firstorder_equations_EFT.h
+
 wrapper.o: 	firstorder.o lensing.o Cls_post_process.o
 test.o:		$(OBJ)
 calc_cls.o: $(OBJ)
