--- a/firstorder/inis/alpha3.ini
+++ b/firstorder/inis/alpha3.ini
@@ -3,7 +3,8 @@
 #root for output files 
 root = alpha3
 
-
+khMpc_min = 1.e-4
+khMpc_max = 12.
 
 #if you set alpha_power >=0 , alpha_X(a) = alpha_{X0} a ^ {alpha_power}
 #otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
@@ -25,11 +26,11 @@ de_alpha_H0 = 0.
 #de_alpha_B0 = 0
 #de_alpha_H0 = 0
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
-kMpc = 0.01
+#kMpc = 0.01
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-#output_redshift = 0
+output_redshift = 0
 
-lmax_scalar = 3100
+lmax_scalar = 3400
 lmax_tensor = 1500
 
 #output variables (for SolvePert)
