--- a/firstorder/inis/alpha0.ini
+++ b/firstorder/inis/alpha0.ini
@@ -3,6 +3,9 @@
 #root for output files 
 root = alpha0
 
+khMpc_min = 1.e-4
+khMpc_max = 12.
+
 
 ########## scheme 2, predefined function (if above de_cs2 is commented out) ####################
 #if you set alpha_power >=0 , alpha_X(a) = alpha_{X0} a ^ {alpha_power}
@@ -24,11 +27,11 @@ de_alpha_H0 = 0.
 #de_alpha_B0 = 0
 #de_alpha_H0 = 0
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
-kMpc = 0.01
+#kMpc = 0.01
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-#output_redshift = 0
+output_redshift = 0
 
-lmax_scalar = 3100
+lmax_scalar = 3400
 lmax_tensor = 1500
 
 #output variables (for SolvePert)
