--- a/firstorder/inis/lcdm.ini
+++ b/firstorder/inis/lcdm.ini
@@ -25,8 +25,10 @@ de_alpha_T0 = 0.
 #de_alpha_H0 = 0
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 kMpc = 0.01
+khMpc_min = 1.e-4
+khMpc_max = 12.
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-#output_redshift = 0
+output_redshift = 0
 
 lmax_scalar = 3400
 lmax_tensor = 1500
