--- a/firstorder/inis/lcdm.ini
+++ b/firstorder/inis/lcdm.ini
@@ -3,7 +3,7 @@
 #root for output files 
 root = lcdm
 
-
+output_redshift = 0 0.5 1. 2.
 ########## scheme 2, predefined function (if above de_cs2 is commented out) ####################
 #if you set alpha_power >=0 , alpha_X(a) = alpha_{X0} a ^ {alpha_power}
 #otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
@@ -28,7 +28,7 @@ kMpc = 0.01
 khMpc_min = 1.e-4
 khMpc_max = 12.
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-output_redshift = 0
+
 
 lmax_scalar = 3400
 lmax_tensor = 1500
