--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
-#PLATFORM = MacOS
+PLATFORM = MacOS
 #PLATFORM = Windows
-PLATFORM = LINUX
+#PLATFORM = LINUX
 
 ifeq ($(PLATFORM),MacOS)
 GFORTRAN_NAME = gfortran
