--- a/firstorder/inis/alpha2.ini
+++ b/firstorder/inis/alpha2.ini
@@ -27,7 +27,7 @@ de_alpha_H0 = 0.
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 #kMpc = 0.01
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-output_redshift = 0
+output_redshift = 0 0.5 1. 2.
 
 lmax_scalar = 3400
 lmax_tensor = 1500
