--- a/nonlinear/Makefile
+++ b/nonlinear/Makefile
@@ -9,7 +9,7 @@ include ../configure.in
 include ../compile_rules.in
 
 LIB = libcoopnonlinear.a
-OBJ = nonlinear.o ellipse_collapse.o coupledDE_collapse.o fR1Dobj.o 
+OBJ = nonlinear.o ellipse_collapse.o coupledDE_collapse.o fR1Dobj.o fR3Dobj.o
 
 default: $(LIB) GetZ1 Solve TabZ1 CDSolve CDExport
 
@@ -18,6 +18,11 @@ $(LIB):	$(OBJ)
 
 FR1D: $(OBJ) fR_collapse_1Dtoy.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) fR_collapse_1Dtoy.o $(LINK)
+
+
+FR3D: $(OBJ) fR_collapse_3D.o $(FIRSTORDER)/libcoopfirstorder.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) fR_collapse_3D.o $(LINK)
+
 
 SCC: solve_chameleon_collapse.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) solve_chameleon_collapse.o $(LINK)
