--- a/configure.in
+++ b/configure.in
@@ -1,19 +1,29 @@
+##########minimal settings for LINUX platform ########################
 PLATFORM = MacOS
 #PLATFORM = Windows
 #PLATFORM = LINUX
 
-ifeq ($(PLATFORM),MacOS)
+#############CHANGE these to the gfortran and gcc compilers you are using. ###########
+#For example, if you are using /mypath/gfortran-4.8 and /mypath/gcc/gcc-4.8.
+#You can do
+#GFORTRAN_NAME = /mypath/gfortran-4.8
+#and
+#GCC_NAME = /mypath/gcc-4.8
+################################################################################
+#Another way of doing this is that you can add /mypath/ to the $PATH variable. In bash you do
+#export PATH=/mypath/:$PATH
+#with /mypath/ included in the default search path, you can use
+#GFORTRAN_NAME = gfortran-4.8
+#and
+#GCC_NAME = gcc-4.8
+
+
 GFORTRAN_NAME = gfortran
 GCC_NAME=gcc
-else
-GFORTRAN_NAME = gfortran
-GCC_NAME=gcc
-endif
 
 
 IFORT_NAME=ifort
 ICC_NAME=icc
-
 ######## compiler options  #######
 ### YES or NO
 #### distributed memory (you should have a compiler alias mpif77 or mpif90 installed); This is used to generate multiple chains when doing MCMC.
@@ -32,31 +42,32 @@ C_COMPILER = $(GCC_NAME)
 ########not all libraries are required  (depending on what you want to do)####
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
-##set to EFT for Effective Field Theory Dark Energy models
+### set to EFT for effective field theory, LAMBDA for cosmological constant
 DARK_ENERGY_MODEL = LAMBDA
-#DARK_ENERGY_MODEL = EFT
 #DARK_ENERGY_MODEL = COUPLED_DE
+#DARK_ENERGY_MODEL = EFT
 
-##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
-LAPACK = $(HOME)/work/scilibs/lapack/
+
+##LAPACK lib; for MacOS set LAPACK = APPLE
+LAPACK = APPLE
+#LAPACK = 
 
 ##FFTW lib (v3.2 up)
 FFTW3 =
-#$(HOME)/work/scilibs/fftw3
+#$(HOME)/work/scilibs/fftw/
 
 ## gsl lib 
 GSL =
 #$(HOME)/mathlib/gsl
 
-##CLIK path
 CLIKPATH =
-#$(HOME)/work/scilibs/COOP/forecast/plc-1.0/
+#$(HOME)/work/scilibs/planck15/plc-2.0/
 
-##cfitsio lib, mandatory if you do mapio
+##cfitsio lib, mandatory if you do maps
 CFITSIO =
 #$(HOME)/work/scilibs/cfitsio
 
-##Healpix lib, mandatory if you do mapio
+##Healpix lib, mandatory if you do maps
 HEALPIX =
 #$(HOME)/work/scilibs/Healpix
 
@@ -112,6 +123,8 @@ FC = $(MPI_COMPILER_ALIAS)
 FFLAGS += -DMPI
 CFLAGS += -DMPI
 INCLUDE += -I/usr/local/include
+#for my macOS
+INCLUDE += -I/opt/local/include/openmpi-gcc48/  
 else
 FC = $(FORTRAN_COMPILER)
 endif
@@ -181,7 +194,7 @@ endif
 
 ###set fftw flags here
 ifneq ($(FFTW3),)
-LINK += -L$(FFTW3)/lib -lfftw3 -lfftw3_omp
+LINK += -L$(FFTW3)/lib -lfftw3 
 FFLAGS += -DHAS_FFTW=1
 CFLAGS += -DHAS_FFTW=1
 INCLUDE += -I$(FFTW3)/include 
@@ -218,6 +231,7 @@ endif
 ifeq ($(DARK_ENERGY_MODEL),EFT)
 FFLAGS += -DDO_EFT_DE=1
 endif
+
 
 ##coupled DE
 ifeq ($(DARK_ENERGY_MODEL),COUPLED_DE)
