--- a/configure.in
+++ b/configure.in
@@ -1,29 +1,19 @@
-##########minimal settings for LINUX platform ########################
 PLATFORM = MacOS
 #PLATFORM = Windows
 #PLATFORM = LINUX
 
-#############CHANGE these to the gfortran and gcc compilers you are using. ###########
-#For example, if you are using /mypath/gfortran-4.8 and /mypath/gcc/gcc-4.8.
-#You can do
-#GFORTRAN_NAME = /mypath/gfortran-4.8
-#and
-#GCC_NAME = /mypath/gcc-4.8
-################################################################################
-#Another way of doing this is that you can add /mypath/ to the $PATH variable. In bash you do
-#export PATH=/mypath/:$PATH
-#with /mypath/ included in the default search path, you can use
-#GFORTRAN_NAME = gfortran-4.8
-#and
-#GCC_NAME = gcc-4.8
-
-
+ifeq ($(PLATFORM),MacOS)
 GFORTRAN_NAME = gfortran
 GCC_NAME=gcc
+else
+GFORTRAN_NAME = gfortran
+GCC_NAME=gcc
+endif
 
 
 IFORT_NAME=ifort
 ICC_NAME=icc
+
 ######## compiler options  #######
 ### YES or NO
 #### distributed memory (you should have a compiler alias mpif77 or mpif90 installed); This is used to generate multiple chains when doing MCMC.
@@ -42,34 +32,30 @@ C_COMPILER = $(GCC_NAME)
 ########not all libraries are required  (depending on what you want to do)####
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
-### set to EFT for effective field theory, LAMBDA for cosmological constant
-DARK_ENERGY_MODEL = LAMBDA
-#DARK_ENERGY_MODEL = COUPLED_DE
+##set to EFT for Effective Field Theory Dark Energy models
+#DARK_ENERGY_MODEL = LAMBDA
 #DARK_ENERGY_MODEL = EFT
+DARK_ENERGY_MODEL = COUPLED_DE
 
-
-##LAPACK lib; for MacOS set LAPACK = APPLE
-LAPACK = APPLE
-#LAPACK = 
+##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
+LAPACK = $(HOME)/work/scilibs/lapack/
 
 ##FFTW lib (v3.2 up)
-FFTW3 =
-#$(HOME)/work/scilibs/fftw/
+FFTW3 = $(HOME)/work/scilibs/fftw3
 
 ## gsl lib 
 GSL =
 #$(HOME)/mathlib/gsl
 
+##CLIK path
 CLIKPATH =
-#$(HOME)/work/scilibs/planck15/plc-2.0/
+#$(HOME)/work/scilibs/COOP/forecast/plc-1.0/
 
-##cfitsio lib, mandatory if you do maps
-CFITSIO =
-#$(HOME)/work/scilibs/cfitsio
+##cfitsio lib, mandatory if you do mapio
+CFITSIO = $(HOME)/work/scilibs/cfitsio
 
-##Healpix lib, mandatory if you do maps
-HEALPIX =
-#$(HOME)/work/scilibs/Healpix
+##Healpix lib, mandatory if you do mapio
+HEALPIX = $(HOME)/work/scilibs/Healpix_3.31
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -108,10 +94,12 @@ CFLAGS += -openmp
 endif
 endif
 
-#define your FLAGS here if you are using other compilers
+#define or change FLAGS here 
 #FFLAGS = 
 #CFLAGS =
+FFLAGS += -DDO_ZETA_TRANS=1
 
+# LINK and Include path
 LINK = 
 INCLUDE = -I. -I../include/
 
@@ -123,8 +111,6 @@ FC = $(MPI_COMPILER_ALIAS)
 FFLAGS += -DMPI
 CFLAGS += -DMPI
 INCLUDE += -I/usr/local/include
-#for my macOS
-INCLUDE += -I/opt/local/include/openmpi-gcc48/  
 else
 FC = $(FORTRAN_COMPILER)
 endif
@@ -194,7 +180,7 @@ endif
 
 ###set fftw flags here
 ifneq ($(FFTW3),)
-LINK += -L$(FFTW3)/lib -lfftw3 
+LINK += -L$(FFTW3)/lib -lfftw3 -lfftw3_mpi
 FFLAGS += -DHAS_FFTW=1
 CFLAGS += -DHAS_FFTW=1
 INCLUDE += -I$(FFTW3)/include 
@@ -231,7 +217,6 @@ endif
 ifeq ($(DARK_ENERGY_MODEL),EFT)
 FFLAGS += -DDO_EFT_DE=1
 endif
-
 
 ##coupled DE
 ifeq ($(DARK_ENERGY_MODEL),COUPLED_DE)
