--- a/nonlinear/params.ini
+++ b/nonlinear/params.ini
@@ -32,7 +32,7 @@ de_Q = 0.4082
 ## if de_fR_epsilon is nonzero Hu-Sawicki model is used
 ## f(R) = R - 2 Lambda + 2 Lambda/[n/epsilon (R/Lambda)^n+1]; where n = de_np_index and epsilon  = de_fR_epsilon; Lambda = 3 Omega_Lambda in COOP unitxs
 de_np_index = 1
-de_fR_epsilon = 0.2
+de_fR_epsilon = 1.e-5
 
 
 #====================== halo set up ===================
@@ -45,4 +45,4 @@ collapse_ratio_1 = 0.178
 collapse_ratio_2 = 0.178
 collapse_ratio_3 = 0.178
 
-normalize_to_early = T
+normalize_to_early = F
