--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -1,12 +1,12 @@
 ##Use this ini file to get stacking points
 ##All fwhm's are in unit arcmin
 
-#supported formats: HEALPIX or RA-DEC
+#supported formats: HEALPIX or RA-DEC 
 format = HEALPIX
 
 #********************  INPUT FILE **********************
 #the original map file (the file must be in the working directory); 
-map = testmaps/sz.fits
+map = testmaps/numberdensity.fits
 
 #the mask file;
 #leave it blank if you are doing fullsky mask;
@@ -26,24 +26,28 @@ fwhm = 5.
 # yscale is the stretch factor in the local y-axis direction
 output = testmaps/stacking_points.fits
 
-#********************  POINT TYPE **********************
+#********************  MAIN SELECTION ************************
 ## built-in options are:
 ## MAX: hot peaks
 ## MIN: cold peaks
 ## SADDLE: saddle points
 ## ALL: all points (~uniformly sampled)
-point_type = MAX
+point_type = SADDLE
 #point type is defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_pt = 10.
+fwhm_pt = 20.
 
+#or, you can use external input  (theta, phi) list; 
+#the file format can be a .txt ASCII file with each row containing two numbers (theta, phi)
+#or a .fits file containing a 2d image (NAXIS1 = 2;  NAXIS2 = n)
+external_list = 
 #********************  AMPLITUDE SELECTION **********************
 #amplitude nu = map/rms(map)
 nu_min = -1.e30
 nu_max = 1.e30
 #peak/saddle and amplitude selection defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_nu = 0
+fwhm_nu = 10
 
 #leave it blank, unless you want to use an external scalar map for amplitude selection;
 map_nu = 
@@ -66,12 +70,12 @@ map_e =
 #RANDOM: random orientation
 #HESSIAN: local Hessian of the original map
 #QU: local Hessian of inverse Laplacian of the original map
-orient = RANDOM
+orient = HESSIAN
 
 #Hessian defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
 #only used when orient = Hessian or QU
-fwhm_orient = 0.
+fwhm_orient = 20.
 
 #leave it blank, unless you want to use an external spin-2 (i.e. QU) map for orientation selection;
 map_orient = 
@@ -80,11 +84,14 @@ map_orient =
 #SYMMETRIC: symmetric
 #X_UP:  enforce \partial_x map > 0 by flipping the patches in x direction
 #Y_UP:  enforce \partial_y map > 0 by flipping the patches in y direction
-#XY_UP:  enforce \partial_x map > 0 and \partial_y map > 0 by flipping the patches in x/y direction
-symmetry = SYMMETRIC
+#XY_UP:  enforce both \partial_x map > 0 and \partial_y map > 0 by flipping the patches in x/y directions
+#IL_X_UP: enforce \partial_x \nabla^{-2} map > 0  by flipping the patches in x direction
+#IL_Y_UP: enforce \partial_y \nabla^{-2} map > 0  by flipping the patches in y direction
+#IL_XY_UP: enforce both \partial_x \nabla^{-2} map > 0 and \partial_y \nabla^{-2} map > 0 by flipping the patches in x/y directions
+symmetry = X_UP
 
 #\partial_x map, \partial_y map defined with what resolution?
-fwhm_sym = 0.
+fwhm_sym = 30.
 
 #leave it blanck, unless you want to use an external spin-1 map for parity selection
 map_sym =
