--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -9,8 +9,8 @@ format = HEALPIX
 map = testmaps/numberdensity.fits
 
 #the mask file;
-#leave it blank if you are doing fullsky mask;
-#set it to be AUTOMATIC if you want the mask to be identified from zero regions;
+#leave it blank if you are working with fullsky maps;
+#set it to be AUTOMATIC if you want the mask to be automatically generated (by searching for continuous zero regions)
 mask = AUTOMATIC
 
 #the resolution of original map;
@@ -32,7 +32,7 @@ output = testmaps/stacking_points.fits
 ## MIN: cold peaks
 ## SADDLE: saddle points
 ## ALL: all points (~uniformly sampled)
-point_type = SADDLE
+point_type = ALL
 #point type is defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
 fwhm_pt = 20.
@@ -43,7 +43,7 @@ fwhm_pt = 20.
 external_list = 
 #********************  AMPLITUDE SELECTION **********************
 #amplitude nu = map/rms(map)
-nu_min = -1.e30
+nu_min = 0.
 nu_max = 1.e30
 #peak/saddle and amplitude selection defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
@@ -70,7 +70,7 @@ map_e =
 #RANDOM: random orientation
 #HESSIAN: local Hessian of the original map
 #QU: local Hessian of inverse Laplacian of the original map
-orient = HESSIAN
+orient = RANDOM
 
 #Hessian defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
@@ -88,7 +88,7 @@ map_orient =
 #IL_X_UP: enforce \partial_x \nabla^{-2} map > 0  by flipping the patches in x direction
 #IL_Y_UP: enforce \partial_y \nabla^{-2} map > 0  by flipping the patches in y direction
 #IL_XY_UP: enforce both \partial_x \nabla^{-2} map > 0 and \partial_y \nabla^{-2} map > 0 by flipping the patches in x/y directions
-symmetry = X_UP
+symmetry = SYMMETRIC
 
 #\partial_x map, \partial_y map defined with what resolution?
 fwhm_sym = 30.
