--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -32,18 +32,19 @@ output = testmaps/stacking_points.fits
 ## MIN: cold peaks
 ## SADDLE: saddle points
 ## ALL: all points (~uniformly sampled)
-point_type = ALL
+point_type = MAX
 #point type is defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_pt = 20.
+fwhm_pt = 10.
 
-#or, you can use external input  (theta, phi) list; 
-#the file format can be a .txt ASCII file with each row containing two numbers (theta, phi)
-#or a .fits file containing a 2d image (NAXIS1 = 2;  NAXIS2 = n)
-external_list = 
+#or, you can use external input  (theta, phi ...) list or (pixel, theta, phi ...) list; 
+#the file format can be a .txt ASCII file with each row being (theta, phi ... ) or (pixel, theta, phi ...)
+#or a .fits file containing a 2d image (NAXIS1 >= 2;  NAXIS2 = n), each row is (theta, phi, ...) or (pixel , theta, phi ...)
+external_list =
+#testmaps/stacking_points.fits
 #********************  AMPLITUDE SELECTION **********************
 #amplitude nu = map/rms(map)
-nu_min = 0.
+nu_min = -1.e30
 nu_max = 1.e30
 #peak/saddle and amplitude selection defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
@@ -53,14 +54,14 @@ fwhm_nu = 10
 map_nu = 
 #********************  ECCENTRICITY SELECTION **********************
 #eccentricity of the local Hessian
-# e = sqrt{ [(f_xx - f_yy)^2 + f_xy^2] / (f_xx^2 + f_yy^2) }
+# e = sqrt{ [(f_xx - f_yy)^2 + f_xy^2] }/ (f_xx^2 + f_yy^2) 
 # on peaks 0<=e<=1;
 # on saddle points, e can be > 1; 
-e_min = -1.e30
+e_min = 0.5
 e_max = 1.e30
 #local Hessian defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_e = 0.
+fwhm_e = 10.
 
 #leave it blank, unless you want to use an external IQU map for eccentricity selection
 map_e = 
