--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -35,7 +35,7 @@ output = testmaps/stacking_points.fits
 point_type = MAX
 #point type is defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_pt = 10.
+fwhm_pt = 20.
 
 #or, you can use external input  (theta, phi ...) list or (pixel, theta, phi ...) list; 
 #the file format can be a .txt ASCII file with each row being (theta, phi ... ) or (pixel, theta, phi ...)
@@ -44,11 +44,11 @@ external_list =
 #testmaps/stacking_points.fits
 #********************  AMPLITUDE SELECTION **********************
 #amplitude nu = map/rms(map)
-nu_min = -1.e30
+nu_min =  0.
 nu_max = 1.e30
 #peak/saddle and amplitude selection defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_nu = 10
+fwhm_nu = 20
 
 #leave it blank, unless you want to use an external scalar map for amplitude selection;
 map_nu = 
@@ -57,11 +57,11 @@ map_nu =
 # e = sqrt{ [(f_xx - f_yy)^2 + f_xy^2] }/ (f_xx^2 + f_yy^2) 
 # on peaks 0<=e<=1;
 # on saddle points, e can be > 1; 
-e_min = 0.5
+e_min = 0.2
 e_max = 1.e30
 #local Hessian defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
-fwhm_e = 10.
+fwhm_e = 20.
 
 #leave it blank, unless you want to use an external IQU map for eccentricity selection
 map_e = 
@@ -73,7 +73,7 @@ map_e =
 #QU: local Hessian of inverse Laplacian of the original map
 orient = RANDOM
 
-#Hessian defined with what resolution?
+#Hessian/QU defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
 #only used when orient = Hessian or QU
 fwhm_orient = 20.
