--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -24,7 +24,7 @@ fwhm = 5.
 # angle defines the local x-axis direction (w.r.t. the horizontal direction)
 # xscale is the stretch factor in the local x-axis direction
 # yscale is the stretch factor in the local y-axis direction
-output = testmaps/stacking_points.fits
+output = testmaps/stacking_pts.fits
 
 #********************  MAIN SELECTION ************************
 ## built-in options are:
@@ -40,8 +40,7 @@ fwhm_pt = 20.
 #or, you can use external input  (theta, phi ...) list or (pixel, theta, phi ...) list; 
 #the file format can be a .txt ASCII file with each row being (theta, phi ... ) or (pixel, theta, phi ...)
 #or a .fits file containing a 2d image (NAXIS1 >= 2;  NAXIS2 = n), each row is (theta, phi, ...) or (pixel , theta, phi ...)
-external_list =
-#testmaps/stacking_points.fits
+external_list = testmaps/stacking_points.fits
 #********************  AMPLITUDE SELECTION **********************
 #amplitude nu = map/rms(map)
 nu_min =  0.
@@ -57,7 +56,7 @@ map_nu =
 # e = sqrt{ [(f_xx - f_yy)^2 + f_xy^2] }/ (f_xx^2 + f_yy^2) 
 # on peaks 0<=e<=1;
 # on saddle points, e can be > 1; 
-e_min = 0.2
+e_min = 0.
 e_max = 1.e30
 #local Hessian defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
@@ -71,7 +70,7 @@ map_e =
 #RANDOM: random orientation
 #HESSIAN: local Hessian of the original map
 #QU: local Hessian of inverse Laplacian of the original map
-orient = RANDOM
+orient = HESSIAN
 
 #Hessian/QU defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
