seems everything is working

--- a/mapio/params_stack.ini
+++ b/mapio/params_stack.ini
@@ -20,10 +20,10 @@ field = I
 radius = 2
 
 #resolution (pixel size = radius / resolution)
-res = 100
+res = 70
 
-#output root; the COOP figure will be output.txt etc.
-output = stacked/nstack
+#output root; the COOP figure will be output.txt output.fits etc.
+output = stacked/stackfig
 
 #********************* for output figure(s) *************************
 #label(s) for stacked quantity (can be any latex label)
