--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -24,7 +24,7 @@ fwhm = 5.
 # angle defines the local x-axis direction (w.r.t. the horizontal direction)
 # xscale is the stretch factor in the local x-axis direction
 # yscale is the stretch factor in the local y-axis direction
-output = testmaps/stacking_pts.fits
+output = testmaps/stacking_points.fits
 
 #********************  MAIN SELECTION ************************
 ## built-in options are:
@@ -40,10 +40,10 @@ fwhm_pt = 20.
 #or, you can use external input  (theta, phi ...) list or (pixel, theta, phi ...) list; 
 #the file format can be a .txt ASCII file with each row being (theta, phi ... ) or (pixel, theta, phi ...)
 #or a .fits file containing a 2d image (NAXIS1 >= 2;  NAXIS2 = n), each row is (theta, phi, ...) or (pixel , theta, phi ...)
-external_list = testmaps/stacking_points.fits
+external_list = 
 #********************  AMPLITUDE SELECTION **********************
 #amplitude nu = map/rms(map)
-nu_min =  0.
+nu_min =  -1.e30
 nu_max = 1.e30
 #peak/saddle and amplitude selection defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
@@ -52,12 +52,18 @@ fwhm_nu = 20
 #leave it blank, unless you want to use an external scalar map for amplitude selection;
 map_nu = 
 #********************  ECCENTRICITY SELECTION **********************
-#eccentricity of the local Hessian
-# e = sqrt{ [(f_xx - f_yy)^2 + f_xy^2] }/ (f_xx^2 + f_yy^2) 
+#eccentricity of the local HESSIAN or QU map
+# for HESSIAN e = sqrt{ [(f_xx - f_yy)^2 + f_xy^2] }/ (f_xx^2 + f_yy^2)
+# for QU you replace f with \nabla^{-2}f
 # on peaks 0<=e<=1;
 # on saddle points, e can be > 1; 
 e_min = 0.
 e_max = 1.e30
+
+#if e_option = HESSIAN, f =  original map
+#if e_option = QU,  f = Inverse Laplacian of original map
+e_option = HESSIAN
+
 #local Hessian defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
 fwhm_e = 20.
@@ -70,7 +76,7 @@ map_e =
 #RANDOM: random orientation
 #HESSIAN: local Hessian of the original map
 #QU: local Hessian of inverse Laplacian of the original map
-orient = HESSIAN
+orient = RANDOM
 
 #Hessian/QU defined with what resolution?
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
@@ -81,14 +87,15 @@ fwhm_orient = 20.
 map_orient = 
 ##******************** PARITY SELECTION *****************************
 #built-in options are
-#SYMMETRIC: symmetric
-#X_UP:  enforce \partial_x map > 0 by flipping the patches in x direction
-#Y_UP:  enforce \partial_y map > 0 by flipping the patches in y direction
-#XY_UP:  enforce both \partial_x map > 0 and \partial_y map > 0 by flipping the patches in x/y directions
-#IL_X_UP: enforce \partial_x \nabla^{-2} map > 0  by flipping the patches in x direction
-#IL_Y_UP: enforce \partial_y \nabla^{-2} map > 0  by flipping the patches in y direction
-#IL_XY_UP: enforce both \partial_x \nabla^{-2} map > 0 and \partial_y \nabla^{-2} map > 0 by flipping the patches in x/y directions
+#SYMMETRIC: no parity selection
+#X_UP:  enforce \partial_x f > 0 by flipping the patches in x direction
+#Y_UP:  enforce \partial_y f > 0 by flipping the patches in y direction
+#XY_UP:  enforce both \partial_x f > 0 and \partial_y f > 0 by flipping the patches in x/y directions
 symmetry = SYMMETRIC
+
+#if sym_option = HESSIAN, f = original map
+#if sym_option = QU, f = Inverse Laplacian of original map
+sym_option = HESSIAN
 
 #\partial_x map, \partial_y map defined with what resolution?
 fwhm_sym = 30.
