allow pre-smoothing

--- a/mapio/params_getpeaks.ini
+++ b/mapio/params_getpeaks.ini
@@ -6,12 +6,12 @@ format = HEALPIX
 
 #********************  INPUT FILE **********************
 #the original map file (the file must be in the working directory); 
-map = testmaps/numberdensity.fits
+map = testmaps/planck.fits
 
 #the mask file;
 #leave it blank if you are working with fullsky maps;
 #set it to be AUTOMATIC if you want the mask to be automatically generated (by searching for continuous zero regions)
-mask = AUTOMATIC
+mask = 
 
 #the resolution of original map;
 fwhm = 5.
@@ -24,7 +24,7 @@ fwhm = 5.
 # angle defines the local x-axis direction (w.r.t. the horizontal direction)
 # xscale is the stretch factor in the local x-axis direction
 # yscale is the stretch factor in the local y-axis direction
-output = testmaps/stacking_points.fits
+output = testmaps/planck_peaks.fits
 
 #********************  MAIN SELECTION ************************
 ## built-in options are:
@@ -37,7 +37,7 @@ point_type = MAX
 #if set to be <= fwhm, will use fwhm (i.e. the original map without smoothing)
 fwhm_pt = 20.
 
-#or, you can use external input  (theta, phi ...) list or (pixel, theta, phi ...) list; 
+#or, you can use an external input:  (theta, phi ...) list or (pixel, theta, phi ...) list; 
 #the file format can be a .txt ASCII file with each row being (theta, phi ... ) or (pixel, theta, phi ...)
 #or a .fits file containing a 2d image (NAXIS1 >= 2;  NAXIS2 = n), each row is (theta, phi, ...) or (pixel , theta, phi ...)
 external_list = 
