--- a/mapio/params_stack.ini
+++ b/mapio/params_stack.ini
@@ -1,11 +1,18 @@
+#this ini file is for stacking 2d maps
+#all fwhm units are arcmin.
+
 #map file format HEALPIX or RA-DEC
 format = HEALPIX
 
 #map to be stacked
-map = testmaps/numberdensity_AMPLITUDE_fwhm10a.fits
+map = testmaps/planck.fits
+#the input resolution
+fwhm_in = 5.
+#if you want to pre-smooth the map to a differnt resolution before stacking
+fwhm_presmooth = 20.
 
 #stacking points are saved in
-peaks = testmaps/stacking_points.fits
+peaks = testmaps/planck_peaks.fits
 
 #mask
 mask = 
@@ -14,7 +21,7 @@ mask =
 #I:  just stack intensity map
 #QU: stack spin-2 maps (note that they differ for different local coordinates)
 #QrUr: rotated Q, U (see WMAP7 paper)
-field = I
+field = QrUr
 
 #radius in degree (the size of the patch is (radius * 2) degrees by (radius*2) degrees)
 radius = 2
